[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/controlswithsound/SoundButton.gd" type="Script" id=1]
[ext_resource path="res://src/ui/YesNoDialog.gd" type="Script" id=2]

[node name="YesNoDialog" type="PopupPanel"]
margin_right = 104.0
margin_bottom = 53.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 98.0
margin_bottom = 21.0
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 19.0
text = "Are you sure you want to quit?"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 98.0
margin_bottom = 47.0
alignment = 1

[node name="Yes" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
text = "Yes"
script = ExtResource( 1 )

[node name="No" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_right = 98.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
text = "No"
script = ExtResource( 1 )
sound_type = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/No" to="." method="_on_No_pressed"]
